# NYC-Taxi

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/: mkdocs.yml
docs/docs/: index.md
nyc_taxi/: __init__.py  dataset.py  features.py  plots.py
nyc_taxi/modeling/: predict.py  train.py
